dynamic loading of components demo

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,17 @@
-<p>footer works!</p>
+
+<div className="container d-flex flex-column">
+    <div className="row">
+      <div className="col-md-6">
+        <div className="d-flex flex-row">
+          <div className="mx-2 text-uppercase">Facebook</div>
+          <div className="mx-2 text-uppercase">+</div>
+          <div className="mx-2 text-uppercase">Instagram</div>
+          <div className="mx-2 text-uppercase">+</div>
+          <div className="mx-2 text-uppercase">Dribbble</div>
+        </div>
+      </div>
+    </div>
+    <small className="text-center mt-5 footer-copyright">
+      &copy; Nairobi, 2023. All rights reserved.
+    </small>
+  </div>
