--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
     <div class="header-right">
       <a class="active" href="#home">Home</a>
       <a routerLink="/contact">Contact</a>
-      <a routerLink="/abbout">About</a>
+      <a routerLink="/about">About</a>
     </div>
     <div class="profile">
       <ul>
