--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
 
 
 
-<div class="header" appHeader>
+<div class="header">
     <a href="#default" class="logo">CompanyLogo</a>
     <div class="header-right">
       <a class="active" href="#home">Home</a>
@@ -17,4 +17,6 @@
         <li><a routerLink="/login" onclick="loadLoginComponent()">Login</a></li>
       </ul>
     </div>
+
+    <ng-template appHeader></ng-template>
   </div>
