--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,16 @@
-
-
-
-
-
-
-<div class="header">
-    <a href="#default" class="logo">CompanyLogo</a>
-    <div class="header-right">
-      <a class="active" href="#home">Home</a>
+<nav class="navbar nav-expand">
+  <div class="container-fluid">
+    <a [routerLink]="['#']" class="navbar-brand">CompanyLogo</a>
+    <div class="navbar-nav me-auto">
+      <a class="active" [routerLink]="['/home']">Home</a>
       <a routerLink="/contact">Contact</a>
       <a routerLink="/about">About</a>
     </div>
     <div class="profile">
-      <ul>
-        <li><a routerLink="/register" onclick="loadRegisterComponent()">Register</a></li>
-        <li><a routerLink="/login" onclick="loadLoginComponent()">Login</a></li>
-      </ul>
+      <a [routerLink]="['/register']" onclick="loadRegisterComponent()">Register</a>|
+      <a [routerLink]="['/login']" onclick="loadLoginComponent()">Login</a>
     </div>
 
     <ng-template appHeader></ng-template>
   </div>
+</nav>
