--- a/src/core/components/login/login.component.html
+++ b/src/core/components/login/login.component.html
@@ -1,3 +1,39 @@
-<div>
-  <h2>{{ component_title }}</h2>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<form class="loginTemplate">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>{{component_title | uppercase}}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-form-field>
+        <mat-label>User-name</mat-label>
+        <input matInput type="text" class="formControl" [(ngModel)]="inputUser_name" (ngModelChange)="handleUser($event)" required placeholder="jina">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput type="password" class="formControl" [(ngModel)]="inputPassword" (ngModelChange)="handlePass($event)" required placeholder="password">
+      </mat-form-field>
+      <button type="submit" mat-raised-button color="primary" (click)="login()">login</button>
+    </mat-card-content>
+    <mat-card-footer>
+      <p>Not Registered yet? <a routerLink="/register">here</a> </p>
+    </mat-card-footer>
+  </mat-card>
+</form>
