--- a/src/core/components/register/register.component.html
+++ b/src/core/components/register/register.component.html
@@ -1,3 +1,53 @@
-<div>
-  <h3>{{ component_title }}</h3>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<form [formGroup]="registerProfile">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>{{component_title | lowercase}}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-form-field>
+        <mat-label>First name</mat-label>
+        <input matInput type="text" formControlName="firstName">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Last name</mat-label>
+        <input matInput type="text" formControlName="lastname">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>User-name</mat-label>
+        <input matInput type="text" formControlName="userName">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Email Address</mat-label>
+        <input matInput type="email" formControlName="email">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Phone/Mobile</mat-label>
+        <input matInput type="number" formControlName="mobile">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput type="password" formControlName="password">
+      </mat-form-field>
+    </mat-card-content>
+    <button type="submit" mat-raised-button color="primary" [disabled]="!registerProfile.valid">register</button>
+    <mat-card-footer>
+      <p>Alraedy registered? login <a routerLink="/login">here</a></p>
+    </mat-card-footer>
+  </mat-card>
+</form>
