--- a/src/core/components/login/login.component.html
+++ b/src/core/components/login/login.component.html
@@ -24,13 +24,13 @@
     <mat-card-content>
       <mat-form-field>
         <mat-label>User-name</mat-label>
-        <input matInput type="text" class="formControl" [(ngModel)]="inputUser_name" (ngModelChange)="handleUser($event)" required placeholder="jina">
+        <input matInput type="text" class="formControl" required placeholder="jina">
       </mat-form-field>
       <mat-form-field>
         <mat-label>Password</mat-label>
-        <input matInput type="password" class="formControl" [(ngModel)]="inputPassword" (ngModelChange)="handlePass($event)" required placeholder="password">
+        <input matInput type="password" class="formControl" required placeholder="password">
       </mat-form-field>
-      <button type="submit" mat-raised-button color="primary" (click)="login()">login</button>
+      <button type="submit" mat-raised-button color="primary">login</button>
     </mat-card-content>
     <mat-card-footer>
       <p>Not Registered yet? <a routerLink="/register">here</a> </p>
