--- a/src/feature/components/product/product.component.html
+++ b/src/feature/components/product/product.component.html
@@ -1,1 +1,7 @@
-<p>product works!</p>
+<mat-card>
+    <mat-card-header></mat-card-header>
+    <mat-card-content>
+        <img mat-card-image routerLink="">
+    </mat-card-content>
+    <mat-card-actions></mat-card-actions>
+</mat-card>
