--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,13 @@
+
+
+
+
+
+
+
+
+
+
 <nav class="navbar nav-expand">
   <div class="container-fluid">
     <a [routerLink]="['#']" class="navbar-brand">CompanyLogo</a>
@@ -6,9 +16,9 @@
       <a routerLink="/contact">Contact</a>
       <a routerLink="/about">About</a>
     </div>
-    <div class="profile">
-      <a [routerLink]="['/register']" onclick="loadRegisterComponent()">Register</a>|
-      <a [routerLink]="['/login']" onclick="loadLoginComponent()">Login</a>
+    <div class="profile" #profile>
+      <a [routerLink]="['/register']" #register onclick="loadRegisterComponent()">Register</a>|
+      <a [routerLink]="['/login']" #login onclick="loadLoginComponent()">Login</a>
     </div>
 
     <ng-template appHeader></ng-template>
