--- a/src/core/components/register/register.component.html
+++ b/src/core/components/register/register.component.html
@@ -17,32 +17,32 @@
 <form [formGroup]="registerProfile">
   <mat-card>
     <mat-card-header>
-      <mat-card-title>{{component_title | lowercase}}</mat-card-title>
+      <mat-card-title>{{ component_title | lowercase }}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <mat-form-field>
         <mat-label>First name</mat-label>
-        <input matInput type="text" formControlName="firstName">
+        <input matInput type="text" id="firstname" #firstname formControlName="firstName">
       </mat-form-field>
       <mat-form-field>
         <mat-label>Last name</mat-label>
-        <input matInput type="text" formControlName="lastname">
+        <input matInput type="text" id="lastname" #lastname formControlName="lastname">
       </mat-form-field>
       <mat-form-field>
         <mat-label>User-name</mat-label>
-        <input matInput type="text" formControlName="userName">
+        <input matInput type="text" id="username" #user formControlName="userName">
       </mat-form-field>
       <mat-form-field>
         <mat-label>Email Address</mat-label>
-        <input matInput type="email" formControlName="email">
+        <input matInput type="email" id="email" #email formControlName="email">
       </mat-form-field>
       <mat-form-field>
         <mat-label>Phone/Mobile</mat-label>
-        <input matInput type="number" formControlName="mobile">
+        <input matInput type="number" id="mobile" #mobile formControlName="mobile">
       </mat-form-field>
       <mat-form-field>
         <mat-label>Password</mat-label>
-        <input matInput type="password" formControlName="password">
+        <input matInput type="password" id="password" #password formControlName="password">
       </mat-form-field>
     </mat-card-content>
     <button type="submit" mat-raised-button color="primary" [disabled]="!registerProfile.valid">register</button>
