--- a/src/feature/components/product/product.component.html
+++ b/src/feature/components/product/product.component.html
@@ -1,6 +1,24 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <mat-card>
-    <mat-card-header></mat-card-header>
+    <mat-card-header>{{product}}</mat-card-header>
     <mat-card-content>
+        <span *ngFor="let prod of product;"> {{ prod }}</span>
         <img mat-card-image routerLink="">
     </mat-card-content>
     <mat-card-actions></mat-card-actions>
